crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__multiple__all_periodic__all_periodic.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Ok(
    (
        "",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        January,
                        December,
                    ),
                    periodic: MonthPeriodic(
                        2,
                    ),
                },
                MonthKind {
                    range: (
                        January,
                        December,
                    ),
                    periodic: MonthPeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
